--- a/src/style/partial/footer.styl
+++ b/src/style/partial/footer.styl
@@ -7,7 +7,7 @@
   z-index: 5
   justify-content:space-around
   background-color: color-background-head
-  box-shadow: 0 -2px 5px color-border
+  box-shadow: 0 (- offset-shadow-light) width-shadow-light color-shadow-light
   ul.playctrl
     semimargin:1em
     font-size:1.5rem
@@ -44,7 +44,7 @@
       background-color:color-border
     .track-buffered
       width:60%
-      background-color:lightness(color-border,55%)
+      background-color:color-border-darker
     .track-played
       width:40%
       background-color:	color-active
