--- a/src/style/partial/head.styl
+++ b/src/style/partial/head.styl
@@ -5,7 +5,7 @@
   background-color: color-background-head
   height: 2.5rem
   line-height: 1.2rem
-  box-shadow: 0 ($shadow-offset = 2px) ($shadow-width = 5px) color-border
+  box-shadow: 0 ($shadow-offset = offset-shadow-light) ($shadow-width = width-shadow-light) color-shadow-light
   $space=(@height - @line-height)/2
   ul.nav
     list-style:none
