--- a/src/style/common.styl
+++ b/src/style/common.styl
@@ -10,8 +10,8 @@ a
   text-decoration: none
   &:hover
     color: color-text-active
-a.button
-  display:inline-block
+.button
+  display:block
   background-color: white
   padding: 0.2rem 1rem
   border: 1px solid color-border
@@ -21,6 +21,22 @@ a.button
   &:hover,&:focus
     border-color: color-border-dark
     background-color: color-background-btn-inactive
+  &.active,&:active
+    background-color: color-background-btn-inactive
+    border-color: color-border-dark
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.125) inset
+.btn-group
+  .button
+    display:inline-block
+    border-radius:0
+  .button:first-child
+    border-top-left-radius:4px
+    border-bottom-left-radius:4px
+  .button:last-child
+    border-top-right-radius:4px
+    border-bottom-right-radius:4px
+  .button:nth-child(n+1)
+    margin-left:-1px
 .right
   float:right
 .left
@@ -97,7 +113,7 @@ ul.list-inline
   border: 1px solid color-border
   border-radius: 4px
   semipadding: @border-radius vertial
-  box-shadow: 0px -6px 12px color-border
+  box-shadow: 0px (- offset-shadow-light) width-shadow-light color-shadow-light
   z-index:5
   & > li
     list-style:outside none none
@@ -162,10 +178,9 @@ $arrow-size = 11px
 input
   display:block
   padding:.2rem
-  color: #555
-  background-color: white
+  background-color: #f4f4f4
   border: 1px solid color-border
-  border-radius: 4px
+  border-radius: 2px
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset
   transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s
   &:focus
