--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -1,5 +1,5 @@
-@import "_variables"
-@import '_util/*'
+@import "variables"
+@import 'mixin'
 @import 'common'
 html
   font: font-size/line-height font-sans
