--- a/src/style/variables.styl
+++ b/src/style/variables.styl
@@ -1,13 +1,13 @@
 // Colors
 color-default = #000//
-color-active = #66AFE9//
+color-active = #0099CC//
 color-background-panel=#fff
+color-background-grey = #f0f0f0
+color-background-greyer = #d5d5d5
 color-background-head=#fafafa
 color-background-body=#efefef
-color-background-body-hover=lightness(color-background-body,88%)
-color-background-btn-inactive=#e6e6e6
 
-color-border = #CCC//
+color-border = #ccc//
 color-border-dark = lightness(color-border,65%)
 color-border-darker = lightness(color-border,55%)
 color-text-active = #000
@@ -28,7 +28,7 @@ font-size = 14px
 line-height = 1.6em
 
 // gap
-base-gap = 1em
+base-gap = 1rem
 half-gap = base-gap/2
 // Media queries
 mq-small = "screen and (max-width: 768px)"
