--- a/src/style/common.styl
+++ b/src/style/common.styl
@@ -10,31 +10,35 @@ a
   text-decoration: none
   &:hover
     color: color-text-active
+.panel
+  background-color:color-background-panel
+  //box-shadow:1px 1px 3px rgba(color-default,30%)
+  -webkit-filter:drop-shadow(1px 1px 1px rgba(color-default,30%))
 .button
   display:block
-  background-color: white
+  background-color: color-background-grey
   padding: 0.2rem 1rem
   border: 1px solid color-border
-  border-radius: 4px
+  //border-radius: 4px
   white-space:nowrap
   cursor:pointer
   &:hover,&:focus
-    border-color: color-border-dark
-    background-color: color-background-btn-inactive
+    background-color: #F5F5F5
   &.active,&:active
-    background-color: color-background-btn-inactive
-    border-color: color-border-dark
-    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.125) inset
+    color:white
+    border-color: color-active
+    background-color: color-active
+
 .btn-group
   .button
     display:inline-block
-    border-radius:0
-  .button:first-child
-    border-top-left-radius:4px
-    border-bottom-left-radius:4px
-  .button:last-child
-    border-top-right-radius:4px
-    border-bottom-right-radius:4px
+    //border-radius:0
+    // .button:first-child
+    //   border-top-left-radius:4px
+    //   border-bottom-left-radius:4px
+    // .button:last-child
+    //   border-top-right-radius:4px
+    //   border-bottom-right-radius:4px
   .button:nth-child(n+1)
     margin-left:-1px
 .right
@@ -58,10 +62,20 @@ a
   justify-content:space-between
   align-items:center
 
-.row
-  @extend .clearfix
-  margin: base-gap -(base-gap)
-
+.slim-scrollbar
+  overflow-y:auto
+  //overwrite scrollbar
+  &::-webkit-scrollbar
+    width:8px
+  &::-webkit-scrollbar-track
+    semimargin:1rem vertial
+  &::-webkit-scrollbar-thumb
+    border-radius:10px
+    background-color:color-border
+.hide-scrollbar
+  overflow-y:auto
+  &::-webkit-scrollbar
+    width:0
 .txt
   overflow:hidden
   text-overflow:ellipsis
@@ -102,8 +116,6 @@ ul.list-inline
   background-color: color-background-panel
   background-clip: padding-box
   border: 1px solid color-border
-  border-radius: 4px
-  semipadding: @border-radius vertial
   box-shadow: 0px (- offset-shadow-light) width-shadow-light color-shadow-light
   z-index:5
   & > li
@@ -114,8 +126,8 @@ ul.list-inline
       white-space:nowrap
       cursor:pointer
       &:hover
-        background-color: #F5F5F5
-        color:#262626
+        background-color: color-active
+        color:white
 
 $arrow-size = 11px
 .arrow
