--- a/src/style/partial/head.styl
+++ b/src/style/partial/head.styl
@@ -2,6 +2,7 @@
   position:fixed
   top:0
   width:100%
+  z-index:1
   background-color: color-background-head
   height: 2.5rem
   line-height: 1.2rem
