--- a/src/style/partial/head.styl
+++ b/src/style/partial/head.styl
@@ -1,8 +1,8 @@
 #top-bar
   position:fixed
-  top:0
-  width:100%
-  z-index:1
+  top:24px
+  width:calc(100% - 6px)
+  z-index:4
   background-color: color-background-head
   height: 2.5rem
   line-height: 1.2rem
