--- a/src/style/variables.styl
+++ b/src/style/variables.styl
@@ -4,12 +4,10 @@ color-active = #0099CC//
 color-background-panel=#fff
 color-background-grey = #f0f0f0
 color-background-greyer = #d5d5d5
-color-background-head=#fafafa
+color-background-head=white
 color-background-body=#efefef
 
 color-border = #ccc//
-color-border-dark = lightness(color-border,65%)
-color-border-darker = lightness(color-border,55%)
 color-text-active = #000
 color-text-default = lightness(color-text-active,25%)//
 color-text-hint = lightness(color-text-default,55%)
@@ -30,6 +28,7 @@ line-height = 1.6em
 // gap
 base-gap = 1rem
 half-gap = base-gap/2
+
 // Media queries
 mq-small = "screen and (max-width: 768px)"
 mq-medium = "screen and (min-width: 769px) and (max-width: 991px)"
