--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -7,9 +7,18 @@ body
   background-color: color-background-body
   color: color-text-default
   //to avoid covered by navtopbar
-  padding-top:2.5rem
-  padding-bottom:3rem
 html, body, #body
   height 100%
   overflow: hidden
+#titlebar
+  position:fixed
+  top:0
+  left:0
+  width:100%
+  z-index:5
+#frame
+  position:relative
+  height: 100%
+  padding:calc(2rem + 24px) 3px 3rem 3px
+  background-color: color-background-body
 @import 'partial/*'
