--- a/src/style/partial/lrcview.styl
+++ b/src/style/partial/lrcview.styl
@@ -1,10 +1,10 @@
 #body .lrcview
   position:absolute
   left:0
-  top:0
-  z-index:2 
+  top:24px
+  z-index:4
   width:100%
-  height:calc(100% - 3rem)
+  height:calc(100% - 24px)
   background-color:color-background-panel
   transition:all .2s ease-in-out
   transform:scale(0,0)
@@ -32,6 +32,7 @@
     height:100%
     z-index:2
     padding:2rem
+    background-color:rgba(color-default,0.25)
     .view-album
       float:left
       width:50%
