--- a/src/style/common.styl
+++ b/src/style/common.styl
@@ -130,6 +130,7 @@ ul.list-inline
       padding:  0.2em 1em
       white-space:nowrap
       cursor:pointer
+      color: color-text-default
       &:hover
         background-color: color-active
         color:white
