--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -6,19 +6,11 @@ html
 body
   background-color: color-background-body
   color: color-text-default
+  padding-top:2rem
+  padding-bottom:3rem
   //to avoid covered by navtopbar
 html, body, #body
   height 100%
   overflow: hidden
-#titlebar
-  position:fixed
-  top:0
-  left:0
-  width:100%
-  z-index:5
-#frame
-  position:relative
-  height: 100%
-  padding:calc(2rem + 24px) 3px 3rem 3px
   background-color: color-background-body
 @import 'partial/*'
