--- a/src/style/partial/head.styl
+++ b/src/style/partial/head.styl
@@ -1,7 +1,8 @@
 #top-bar
   position:fixed
-  top:24px
-  width:calc(100% - 6px)
+  top:0
+  left:0
+  width:100%
   z-index:4
   background-color: color-background-head
   height: 2.5rem
