--- a/src/style/partial/footer.styl
+++ b/src/style/partial/footer.styl
@@ -1,15 +1,16 @@
 width-track=0.2rem
 #footer
   position:fixed
+  left:0
   bottom:0
-  width:calc(100% - 6px)
+  width:100%
   height: 3rem
   z-index: 5
   background-color: color-background-head
   box-shadow: 0 (- offset-shadow-light) width-shadow-light color-shadow-light
   .playinfo
     *
-      transition:all .2s ease-in-out
+      transition:all .1s ease-in
     height:3rem
     line-height:3rem
     display:block
@@ -34,6 +35,8 @@ width-track=0.2rem
     &:hover
       .img i.fa-angle-double-up
         opacity:1
+      background-color:color-active
+      color:white
     img
       background-color:color-background-grey
       height:3rem
@@ -138,7 +141,7 @@ width-track=0.2rem
     background-color:transparent
     color:#ddd
     box-shadow: none
-    & a
+    & .playinfo,& ul.playset > li > a
       color:#ddd
     .playinfo
       .img i.fa-angle-double-down
