--- a/src/style/partial/lrcview.styl
+++ b/src/style/partial/lrcview.styl
@@ -1,10 +1,10 @@
 #body .lrcview
   position:absolute
   left:0
-  top:24px
+  top:0
   z-index:4
   width:100%
-  height:calc(100% - 24px)
+  height:100%
   background-color:color-background-panel
   transition:all .2s ease-in-out
   transform:scale(0,0)
